--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,7 @@
 version: 0.1.{build}
 configuration: Release
 platform: Any CPU
+before_build:
+  - cmd: nuget restore TcpPing.sln
 build:
   verbosity: minimal
